# Agent-1

./: .coverage  .gitignore  check_stats.py  check_stats2.py  check_stats3.py  check_stats4.py  config.py  config.toml  config.yaml  main.py  patch_litellm_log.py  patch_litellm_log2.py  pyproject.toml  query_golden.py  recall-agent-design.md
.github/workflows/: ci.yml
agent/: loop.py
agent_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: default.yaml  eval_config.yaml  tier_10.json
doc/: PR_DESCRIPTION.md  docker-sandbox-plan.md  eval-harness-plan.md  memory-compaction-survey.md  ml_research_bench_plan.md  ml_research_bench_plan_v2.md  ml_research_bench_tasks_plan.md  prompt_caching_best_practices.md  react-loop-implementation-plan.md  react-loop-plan.md  sota_agent_loop_refactor_plan.md  testing-plan.md  tool-response-format-plan.md  trajectory-logging-survey.md
eval/: __init__.py  dataset.py  grader.py  mlrb_dataset.py  mlrb_grader.py  mlrb_runner.py  models.py  reporter.py  run_eval.py  run_mlrb.py  runner.py
eval_dataset/: swebench_verified_easy10.json  swebench_verified_easy10_medium5_hard2.json  swebench_verified_easy20_medium26_hard4.json  swebench_verified_easy40_medium51_hard8.json
memory/: trajectory.py
notebooks/: visualize_metrics.ipynb  visualize_swe_lite.ipynb
prompts/: compaction_prompt.txt  system_prompt.txt  test_failure_prompt.txt
runs/: metrics.db
runs/run_20260616_152652_700208/: trajectory.jsonl
runs/run_20260616_152814_39bfd1/: trajectory.jsonl
runs/run_20260616_153313_7c8d52/: trajectory.jsonl
runs/run_20260616_163526_524c7b/: trajectory.jsonl
runs/run_20260616_164245_91add3/: trajectory.jsonl
scripts/: create_eval_dataset.py  generate_report.py  generate_summaries.py  recover_patches.py  run_eval.sh  verify_sandbox.py
tests/: test_bash_and_run.py  test_command_guard.py  test_config.py  test_file_ops.py  test_main.py  test_registry.py  test_search.py  test_submit.py
tests/agent/: test_loop.py
tools/: __init__.py  base.py  bash.py  command_guard.py  environment.py  file_ops.py  finish.py  registry.py  run_tests.py  search.py  submit.py  submit_patch.py  utils.py
trajectory_viewer/: .gitignore  app.py  main.py  pyproject.toml
(+32 files in other folders)
