[project]
name = "agent-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.1",
    "docker>=7.1.0",
    "langfuse>=4.7.1",
    "litellm>=1.88.1",
    "mcp>=1.27.2",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # Pyflakes (F), pycodestyle errors (E), isort (I)
ignore = ["E501"] # Ignore line too long, as error hint strings often exceed 100 chars
