[project]
name = "agent-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.1",
    "datasets>=5.0.0",
    "docker>=7.1.0",
    "huggingface-hub>=1.18.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langfuse>=4.7.1",
    "litellm>=1.88.1",
    "matplotlib>=3.11.0",
    "mcp>=1.27.2",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ruff>=0.4.0",
    "seaborn>=0.13.2",
    "swebench>=2.1.0",
    "streamlit>=1.58.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # Pyflakes (F), pycodestyle errors (E), isort (I)
ignore = ["E501"] # Ignore line too long, as error hint strings often exceed 100 chars

[tool.setuptools.packages.find]
exclude = ["tests", "doc"]

[tool.coverage.run]
omit = ["trajectory_viewer/*", "scripts/*"]
